# m11-ponderadas

./: README.md
semana-01/ponderada/: .Rhistory  ponderada-notebook.Rmd  ponderada.Rproj
semana-01/ponderada/.Rproj.user/2C845DF0/pcs/: files-pane.pper  windowlayoutstate.pper
semana-01/ponderada/.Rproj.user/2C845DF0/sources/per/t/: 191606B8  1E7E9E49  6C0668EE  961E36D2  961E36D2-contents  F3C25B7F
semana-01/ponderada/.Rproj.user/2C845DF0/sources/prop/: 0BB52058  INDEX
semana-01/ponderada/.Rproj.user/2C845DF0/viewer-cache/: B2CE6A8A.Rdata
semana-01/ponderada/.Rproj.user/shared/notebooks/: paths
semana-01/ponderada/.Rproj.user/shared/notebooks/70013B5D-ponderada-notebook/1/2C845DF0101708c/: chunks.json
semana-01/ponderada/.Rproj.user/shared/notebooks/70013B5D-ponderada-notebook/1/2C845DF0344f2ebe/: chunks.json
semana-01/ponderada/.Rproj.user/shared/notebooks/70013B5D-ponderada-notebook/1/2C845DF0b4040438/: chunks.json
semana-02/data-ingestion/: .env.example  .gitignore  README.md  pyproject.toml
semana-02/data-ingestion/data_ingestion/: app.py  config.py  data_converter.py  data_processor.py  dlq_handler.py  exceptions.py  main.py  parquet_converter.py  queue_consumer.py  storage.py
semana-02/data-ingestion/tests/: conftest.py  test_app.py  test_config.py  test_data_converter.py  test_data_processor.py  test_dlq_handler.py  test_main.py  test_parquet_converter.py  test_queue_consumer.py  test_storage.py
semana-02/ingestao-dados/: docker-compose.yml
(+52 files in other folders)
